# cladia

./: .gitignore  .gitmodules  README.md  pyproject.toml
dfdiagnoser_ml/: __init__.py  analyze_model_diagnostics_eval.py  common.py  create_dataset.py  eval_bottleneck_attribution.py  eval_feature_ablation.py  eval_model_diagnostics.py  evaluate_mean.py  evaluate_quantiles.py  metrics.py  plot_quantiles.py  save_quantiles.py  summarize_model_diagnostics_eval.py  training.py  training_mean.py  training_quantiles.py
scripts/: analyze_single.sh  postproc_all.py
scripts/repro/: analyze_all.sh  build_reproduction_run_plan.py  compare_case_studies.py  create_datasets.sh  create_trace_manifest.sh  dlio_sweep_config_base.csv  dlio_sweep_config_full.csv  postprocess.sh  run_dlio_config_inner.sh  run_dlio_sweep_flux.sh  summarize_case_studies.py  summarize_workload_corpus.py  train_models.sh
tests/: test_ams_study.py  test_common.py  test_metrics.py
