[project]
name = "dfdiagnoser-ml"
version = "0.1.0"
description = "ML-based diagnosis of HPC I/O bottlenecks in deep learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dftracer-analyzer",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "ngboost>=0.5.4",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "structlog>=25.4.0",
    "xgboost>=3.0.3",
]

[tool.uv.sources]
dftracer-analyzer = { path = "dfanalyzer", editable = false }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
